Added on demand ISR

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "dayjs": "^1.10.7",
     "form-data": "^4.0.0",
     "googleapis": "^95.0.0",
