--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-portfolio",
   "private": true,
+  "proxy": "https://www.getrevue.co/api/v2/subscribers",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.74",
     "axios": "^0.26.0",
     "dayjs": "^1.10.7",
     "form-data": "^4.0.0",
@@ -19,6 +21,7 @@
     "next-mdx-remote": "^3.0.8",
     "next-themes": "^0.0.15",
     "nodemailer": "^6.7.2",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
