--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-xarrows": "^2.0.2",
+    "swr": "^1.2.2",
     "use-delayed-render": "^0.0.7"
   },
   "devDependencies": {
