--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
-MAILCHIMP_WEBHOOK_TOKEN=
-GMAIL_API_REFRESH_TOKEN=
+# GRAPHCMS
 GRAPHCMS_WEBHOOK_TOKEN=
+
+# GOOGLE ANALYTICS
 GOOGLE_SITE_VERIFICATION_CONTENT=
 GOOGLE_ANALYTICS_TRACKING_ID=
+
+# MAILCHIMP
+MAILCHIMP_WEBHOOK_TOKEN=
 MAILCHIMP_API_SERVER=
 MAILCHIMP_AUDIENCE_ID=
 MAILCHIMP_API_KEY=
-GMAIL_API_REDIRECT_URI=
-GMAIL_API_CLIENT_SECRET=
-GMAIL_API_CLIENT_ID=
-REVUE_API_KEY=
+
+# GMAIL
+GMAIL_SMTP_USER=
+GMAIL_SMTP_PASSWORD=
