--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,9 @@ MAILCHIMP_API_KEY=
 # GMAIL
 GMAIL_SMTP_USER=
 GMAIL_SMTP_PASSWORD=
+
+# MAGIC
+MAGIC_SECRET_KEY=
+NEXT_PUBLIC_MAGIC_PUB_KEY=
+MAGIC_ENCRYPTION_SECRET=my_encryption_secret_32_chars_long
+NEXT_PUBLIC_EMAIL=
