--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hapi/iron": "^7.0.0",
+    "@magic-sdk/admin": "^1.4.1",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
     "axios": "^0.26.0",
+    "cookie": "^0.5.0",
     "dayjs": "^1.10.7",
     "form-data": "^4.0.0",
     "googleapis": "^95.0.0",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
     "gray-matter": "^4.0.3",
+    "magic-sdk": "^8.1.1",
     "next": "12.1.0",
     "next-mdx-remote": "^3.0.8",
     "next-themes": "^0.0.15",
