--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "magic-sdk": "^8.1.1",
     "next": "12.1.0",
     "next-mdx-remote": "^3.0.8",
+    "next-pwa": "^5.5.4",
     "next-themes": "^0.0.15",
     "nodemailer": "^6.7.2",
     "nprogress": "^0.2.0",
