--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#f69435",
-  "background_color": "#f69435",
+  "theme_color": "#ff7900",
+  "background_color": "#ff7900",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
