status bar and splash screen theme color  made dark for pwa

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#ff7900",
-  "background_color": "#ff7900",
+  "theme_color": "#171717",
+  "background_color": "#171717",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
