--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "graphql-request": "^4.0.0",
     "gray-matter": "^4.0.3",
     "magic-sdk": "^8.1.1",
-    "next": "12.1.0",
+    "next": "13",
     "next-mdx-remote": "^3.0.8",
     "next-pwa": "^5.5.4",
     "next-themes": "^0.0.15",
     "nodemailer": "^6.7.2",
     "nprogress": "^0.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.3.1",
     "react-xarrows": "^2.0.2",
     "swr": "^1.2.2",
@@ -38,7 +38,7 @@
     "autoprefixer": "^10.4.2",
     "cross-env": "^7.0.3",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
+    "eslint-config-next": "13",
     "globby": "^13.1.1",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
